entire site function for an admin. users cant view genres, artists, albums, or songs... yet!

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,32 +7,33 @@
     = csrf_meta_tags
   %body
     .row
-      .large-3.columns
-        %h1
-          %img{:src => "http://images6.fanpop.com/image/photos/34000000/Music-music-34038745-1200-798.jpg"}/
-      .large-9.columns
+      .large-12.columns
         %ul.right.button-group
           %li
             %a.button{:href => "/"} Home
-          %li
-            %a.button{:href => "/albums"} Albums
-          %li
-            %a.button{:href => "/artists"} Artists
           - if !current_user
             %li
               %a.button{:href => "/users/new"} Create New User
             %li
               %a.button{:href => "/sessions/new"} Login
-          - if current_user && current_user.admin
-            %li
-              %a.button{:href => "/users"} Users
           - if current_user
+            %li
+              %a.button{:href => "/genres"} Genres
+            %li
+              %a.button{:href => "/albums"} Albums
+            %li
+              %a.button{:href => "/artists"} Artists
+            %li
+              %a.button{:href => "/songs"} Songs
             %li
               = link_to "#{current_user[:name].capitalize}", user_path(current_user), class: 'button'
             %li
               = link_to 'Edit Profile', edit_user_path(current_user), class: 'button' 
             %li
               = link_to 'Logout', logout_path, method: :delete, class: 'button'
+          - if current_user && current_user.admin
+            %li
+              %a.button{:href => "/users"} Users
     / End Header and Nav
     .row
       = yield
