--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -1,5 +1,11 @@
+= link_to "New Album", new_album_path
+%br
+%br
+
 - @albums.each do |album|
-	= album.name
+	= link_to("#{album['name']}", album_path(album))
+	%br
 	= link_to('Edit', edit_album_path(album))
-	= link_to('Delete', album_path(album), method: :delete)
+	= link_to('Delete', album_path(album), method: :delete, confirm: 'Are you sure you want to do this?')
+	%br
 	%br
